--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sass-loader": "^8.0.0",
     "svg-sprite-loader": "6.0.11",
     "vue-particles": "^1.0.9",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.47.0"
   }
 }
